# kalmanFilter

./: CMakeLists.txt  Readme.md  kalman_demo  main.cpp
analysis/: plot_results.py  results.txt  tuning_experiment.py
include/filter/: kalman.h  kalmanCalcGain.h  kalmanCalcInnovationCov.h  kalmanCalcResidual.h  kalmanCorrectCovariance.h  kalmanCorrectState.h  kalmanDef.h  kalmanInit.h  kalmanPredict.h  kalmanPredictCovariance.h  kalmanPredictState.h  kalmanUpdate.h  kalman_calc_gain.h  kalman_calc_innovation_cov.h  kalman_calc_residual.h  kalman_correct_covariance.h  kalman_correct_state.h  kalman_def.h  kalman_init.h  kalman_predict.h  kalman_predict_covariance.h  kalman_predict_state.h  kalman_update.h
include/math/: matrix.h  matrixAdd.h  matrixCreate.h  matrixIdentity.h  matrixInvert.h  matrixMul.h  matrixPrint.h  matrixSub.h  matrixTranspose.h  matrix_add.h  matrix_create.h  matrix_def.h  matrix_identity.h  matrix_invert.h  matrix_mul.h  matrix_print.h  matrix_sub.h  matrix_transpose.h
src/filter/: kalmanCalcGain.cpp  kalmanCalcInnovationCov.cpp  kalmanCalcResidual.cpp  kalmanCorrectCovariance.cpp  kalmanCorrectState.cpp  kalmanInit.cpp  kalmanPredict.cpp  kalmanPredictCovariance.cpp  kalmanPredictState.cpp  kalmanUpdate.cpp  kalman_calc_gain.cpp  kalman_calc_innovation_cov.cpp  kalman_calc_residual.cpp  kalman_correct_covariance.cpp  kalman_correct_state.cpp  kalman_init.cpp  kalman_predict.cpp  kalman_predict_covariance.cpp  kalman_predict_state.cpp  kalman_update.cpp
src/math/: matrixAdd.cpp  matrixCreate.cpp  matrixIdentity.cpp  matrixInvert.cpp  matrixMul.cpp  matrixPrint.cpp  matrixSub.cpp  matrixTranspose.cpp  matrix_add.cpp  matrix_create.cpp  matrix_identity.cpp  matrix_invert.cpp  matrix_mul.cpp  matrix_print.cpp  matrix_sub.cpp  matrix_transpose.cpp
